Added some basic components to the project

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Showcase from '../components/Showcase.astro'
+import Features from '../components/Features.astro'
+import MainContent from "../components/MainContent.astro";
 ---
 
 <Layout>
-
+    <Showcase showExtra={true} />
+    <Features />
+    <MainContent />
 </Layout>
