--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.scss'
 import Header from '../components/Header.astro'
+import Footer from "../components/Footer.astro";
 
 export interface ILayoutProps {
     title: string
@@ -23,5 +24,6 @@ const {title = 'Astro Blog'} = Astro.props as ILayoutProps
 <body>
     <Header />
     <slot />
+    <Footer/>
 </body>
 </html>
