Added some posts components

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,16 +1,13 @@
 ---
 export interface ICardProps {
-    title: string
-    body: string
     dark?: boolean
 }
 
-const { title, body, dark = false } = Astro.props as ICardProps
+const { dark = false } = Astro.props as ICardProps
 ---
 
 <div class={`card ${dark && 'dark'}`}>
-    <h3>{title}</h3>
-    <p>{body}</p>
+    <slot />
 </div>
 
 <style>
