--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -20,7 +20,10 @@ const featuresList = [
 <section class="features">
     <div class="container">
         {featuresList.map(feature =>
-            <Card title={feature.title} body={feature.body} />
+            <Card>
+                <h3>{feature.title}</h3>
+                <p>{feature.body}</p>
+            </Card>
         )}
     </div>
 </section>
